Properly center GeoPainter::regionFromRect

BUG: 431466